# dirghayu

./: .gitignore  DATA_INGESTION.md  DEMO_RESULTS.md  DEPLOYMENT.md  DEPLOY_ALL.md  Makefile  QUICKSTART.md  README.md  TODO.md  UI_FEATURES.md  UV_BENEFITS.md  app.py  app_hf.py  app_hf_standalone.py  demo.py  dirghayu_report.html  make.ps1  pyproject.toml  quick_demo.py  railway.json  railway.toml  render.yaml  requirements-hf.txt  requirements-render.txt  requirements-streamlit.txt  requirements.txt  streamlit_app.py  web_demo.py
.github/: README.md  dependabot.yml
.github/workflows/: api-test.yml  ci.yml  model-training.yml  release.yml
config/: api.toml
data/: clinvar_sample.vcf  sample.vcf
docs/: README.md  advanced_vcf_analyses.md  genomics_as_nlp.md  github_actions_setup.md  index.html  ml_pipeline.md
models/: README.md  model_specs.md
pipelines/: README.md  variant_calling.toml
schemas/: variant.toml
scripts/: download_data.py  download_real_vcf.py  train_models.py
src/: __init__.py
src/api/: server.py
src/data/: __init__.py  annotate.py  biomarkers.py  dataset.py  vcf_parser.py
src/models/: __init__.py  disease_net.py  drug_response_gnn.py  explainability.py  gene_expression.py  lifespan_net.py  nutrient_predictor.py  pharmacogenomics.py
src/reports/: pdf_generator.py
tests/: smoke_test.py
