# Dirghayu Project Configuration
# Using TOML for Python project settings

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirghayu"
version = "0.1.0"
description = "India-First Longevity-Focused Whole Genome Mapping with Protein-Based Vulnerability Prediction"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Dirghayu Team", email = "team@dirghayu.in"}
]
maintainers = [
    {name = "Dirghayu Team", email = "team@dirghayu.in"}
]
keywords = [
    "genomics",
    "longevity",
    "protein-structure",
    "india",
    "healthcare",
    "machine-learning"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",

    # APIs and web frameworks
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "graphene>=3.3",
    "strawberry-graphql>=0.235.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",

    # Database and storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "boto3>=1.29.0",
    "google-cloud-storage>=2.11.0",

    # ML and scientific computing
    "torch>=2.1.0",
    "tensorflow>=2.15.0",
    "jax>=0.4.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",

    # Genomics specific
    "pysam>=0.22.0",
    "pyvcf>=0.6.8",
    "cyvcf2>=0.30.0",
    "pytabix>=0.1.0",

    # Configuration and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "toml>=0.10.0",
    "jsonschema>=4.19.0",

    # Testing and development
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",

    # Monitoring and observability
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "sentry-sdk>=1.37.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0"
]
gpu = [
    "torch[cu118]>=2.1.0",
    "tensorflow[and-cuda]>=2.15.0",
    "jax[cuda12]>=0.4.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0"
]

[project.urls]
Homepage = "https://dirghayu.in"
Documentation = "https://docs.dirghayu.in"
Repository = "https://github.com/dirghayu/dirghayu"
Issues = "https://github.com/dirghayu/dirghayu/issues"
Changelog = "https://github.com/dirghayu/dirghayu/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
dirghayu = [
    "schemas/*.toml",
    "config/*.toml",
    "static/*",
    "templates/*"
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["dirghayu"]
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cyvcf2.*",
    "pysam.*",
    "tensorflow.*",
    "torch.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]  # assert false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=dirghayu --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU"
]

[tool.coverage.run]
source = ["dirghayu"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]