# Dirghayu Project Configuration
# Optimized for uv (fast Python package installer)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirghayu"
version = "0.1.0"
description = "India-First Longevity-Focused Whole Genome Mapping with Protein-Based Vulnerability Prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dirghayu Team"}
]
keywords = [
    "genomics",
    "longevity",
    "protein-structure",
    "india",
    "healthcare",
    "machine-learning"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    # Core ML/Data
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "shap>=0.49.1",
    "matplotlib>=3.10.8",

    # Genomics-specific
    "cyvcf2>=0.30.0",
    "pysam>=0.21.0",
    "biopython>=1.81",

    # Data storage (local-friendly)
    "pyarrow>=13.0.0",
    "duckdb>=0.9.0",
    "polars>=0.19.0",

    # API (generates OpenAPI spec)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.9",

    # Reporting
    "fpdf>=1.7.2",

    # Utilities
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
]
cloud = [
    # Only install when deploying to GCP
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/data", "src/models", "src/reports"]

[tool.uv]
# uv-specific configuration for faster installs
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Basic linting
ignore = ["E501"]  # Line too long